Refactor tests to use MainApp utility methods for improved structure and logging